appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "build/results/Screenshots/001_001_admin_can_add_content_003-video"
onFlowStart:
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
# Admin login
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/admin_login.yaml"
# add new course
- runFlow:
    file: "common/add_course.yaml"
    env:
      TESTCOURSENAME: "Test Course Block"
# add new teacher using flow - add_new_teacher_inside_course ---------
- runFlow:
    file: "common/add_new_teacher_inside_course.yaml"
    env:
      TESTCOURSENAME: ${TESTCOURSENAME}
      TEACHERFIRSTNAME: "Teacher"
      TEACHERLASTNAME: "1"
      USERNAME: "t1"
      GENDER: "Female"
      PASSWORD: "test"
# add 6 students to the course through bulk import using .csv file
- runFlow:
    file: "common/student_bulk_upload_csv.yaml"
    env:
      TESTFILENAME: "Ustad_Students_List.csv"
      TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
      TESTSERIAL: ${TESTSERIAL}
# teacher add an discussion board block
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "t1"
      PASSWORD: "test"
- tapOn: "Courses"
- tapOn: "Test Course Block"
# edit the course to add blocks
- tapOn:
    id: "floating_action_button"
# add assignment block ------ 1
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
- tapOn: "Add block"
- runFlow:
    when:
      notVisible:
        text: "Discussion board"
    commands:
      - swipe:
          from:
            text: "Drag handle"
          direction: UP
- tapOn: "Discussion board"
- tapOn: "Title*"
- inputText: "Discussion 1"
- hideKeyboard
- assertVisible:
    id: "app_title"
    text: "Add discussion"
- tapOn: "Done"
- tapOn: "Save"
- scrollUntilVisible:
    element:
      text: "Discussion 1"
    direction: DOWN
- tapOn: "Discussion 1"
- assertVisible:            #  +POST button
    id: "floating_action_button"
- back
- tapOn:            #  Edit button
    id: "floating_action_button"
- scrollUntilVisible:
    element:
      text: "Discussion 1"
    direction: DOWN
- tapOn: "Discussion 1"
- tapOn: "Description"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "test block"
- tapOn: "Done"
- assertVisible:
    id: "app_title"
    text: "Edit discussion"
- tapOn: "Done"
- tapOn: "Save"
- assertVisible:
    id: "app_title"
    text: "Test Course Block"
- scrollUntilVisible:
    element:
      text: "Discussion 1"
    direction: DOWN
- tapOn: "Discussion 1"
- tapOn:            #  +POST button
    id: "floating_action_button"
- tapOn: "Title*"
- inputText: "Post 1"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- tapOn: "Link"
- tapOn: "URL"
- inputText: "https://github.com/UstadMobile/UstadMobile/blob/primary/test-end-to-end/README.md"
- hideKeyboard
- tapOn: "Link text (optional)"
- inputText: "Internal link"
- hideKeyboard
- tapOn: "OK"
- tapOn: "Post"
- assertVisible:
    id: "app_title"
    text: "Post 1"
- assertVisible:
    text: "Internal link"

- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "s1"
      PASSWORD: "tests1"
- tapOn: "Courses"
- tapOn: "Test Course Block"
- scrollUntilVisible:
    element:
      text: "Discussion 1"
    direction: DOWN
- tapOn: "Discussion 1"
- assertVisible:
    id: "app_title"
    text: "Test Course Block"
- assertVisible:
    text: "Post 1"
- tapOn: "Post 1"
- tapOn: "Internal link"
- scrollUntilVisible:
    element:
      text: "End-to-end tests"
    direction: DOWN