appId: com.toughra.ustadmobile
tags:
  - hello_world
onFlowStart:
  - startRecording: 000_000_hello_world
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
- launchApp
- tapOn: "GET STARTED"
- tapOn: Site link
- inputText: "${output.SERVER_URL}"
- hideKeyboard
- tapOn: "NEXT"
- tapOn: "Username"
- inputText: ${output.adminUsername}
- tapOn: "Password"
- inputText: ${output.adminPassword}
- hideKeyboard
- tapOn: "LOGIN"
- tapOn: "Library"